--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.3'
 	id 'io.spring.dependency-management' version '1.1.4'
-
+	id "jacoco"
+	id "org.sonarqube" version "4.4.1.3373"
 }
+def customJacocoReportDir = 'jacoco/reports'
 
 group = 'com.synced.domain'
 version = '0.0.1-SNAPSHOT'
@@ -22,6 +24,43 @@ repositories {
 	mavenCentral()
 }
 
+jacoco {
+	toolVersion = '0.8.11'
+}
+
+jacocoTestReport {
+	reports {
+		html.required.set(true)
+		html.outputLocation.set(layout.buildDirectory.dir("$customJacocoReportDir/html"))
+
+		xml.required.set(true)
+		xml.outputLocation.set(layout.buildDirectory.file("$customJacocoReportDir/xml/jacoco.xml"))
+
+		csv.required.set(true)
+		csv.outputLocation.set(layout.buildDirectory.file("$customJacocoReportDir/csv/jacoco.csv"))
+	}
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			limit {
+				minimum = 0.7
+			}
+		}
+	}
+}
+sonarqube {
+	properties {
+		property "sonar.projectKey", "syncd"
+		property "sonar.projectName", "syncd"
+		property "sonar.modules", subprojects.collect { it.name }.join(',')
+		subprojects.forEach { subproject ->
+			property "sonar.${subproject.name}.coverage.jacoco.xmlReportPaths", "${subproject.layout.buildDirectory.get()}/$customJacocoReportDir/xml/jacoco.xml"
+		}
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -38,6 +77,14 @@ dependencies {
 
 
 }
+
+test {
+//	dependsOn loadDotEnvFile
+	finalizedBy jacocoTestReport, jacocoTestCoverageVerification
+	useJUnitPlatform()
+//	systemProperties System.getProperties()
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
