feat: sonarqube complete

--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -2,7 +2,7 @@ name: Sonarqube Code Analysis
 
 on:
   push:
-    branches: [ "infra/#8/sonarqube" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
