--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: Image build and push
 
 on:
   push:
-    branches: [ "infra/#8/gitaction" ]
+    branches: [ "infra/#8/GitAction" ]
     tags:
       - '**'
 
