test: image tag

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,8 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      image-tag: ${{ steps.build_and_push.outputs.tag }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -46,8 +44,6 @@ jobs:
           SPRING_SECURITY_AUTH_LIVEBLOCKSECRETKEY: ${{ secrets.LIVEBLOCK_SECRET_KEY }}
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-      - name: Output the image tag
-        run: echo "::set-output name=tag::${{ secrets.DOCKERHUB_URL }}:${{ github.sha }}"
 
       - name: Notify Slack
         uses: rtCamp/action-slack-notify@v2
@@ -78,7 +74,7 @@ jobs:
         run: |
           cd ${{ secrets.MANIFEST_FOLDER_NAME }}
           FILENAME=${{ secrets.DEPLOYMENT_FILE_NAME }}
-          IMAGE_TAG=${{ needs.build.outputs.image-tag }}
+          IMAGE_TAG=${{ secrets.DOCKERHUB_URL }}:${{ github.sha }}
           REPO_NAME=$(echo "${{ github.repository }}" | awk -F '/' '{print $2}')
           
           if [ ! -f "$FILENAME" ]; then
