--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,8 @@ name: Image build and push
 on:
   push:
     branches: [ "main" ]
-    tags:
-      - '**'
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
