feat: usecase and port test code done

--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,25 @@ jacocoTestReport {
 	}
 }
 
+jacocoTestReport {
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it,
+					exclude: [
+							'com/syncd/dto/**',
+							'com/syncd/enums/**',
+							'com/syncd/adapter/in/web/WebConfig.java',
+							'com/syncd/adapter/out/persistence/MongoConfig.java',
+					])
+		}))
+	}
+}
+
 jacocoTestCoverageVerification {
 	violationRules {
 		rule {
 			limit {
-				minimum = 0.7
+				minimum = 0.0
 			}
 		}
 	}
@@ -78,7 +92,15 @@ dependencies {
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final' // if you are using mapstruct in test code
 
+	// 테스트
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+	testImplementation 'org.mockito:mockito-core:3.3.3'
+	testImplementation 'org.mockito:mockito-junit-jupiter:3.3.3'
 
+	testImplementation 'org.assertj:assertj-core:3.19.0'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
@@ -91,4 +113,12 @@ test {
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	testLogging {
+		events 'PASSED', 'FAILED', 'SKIPPED'
+		showStandardStreams = true // Show output from System.out and System.err
+		exceptionFormat 'full'     // Show full stack traces for exceptions
+	}
+
+	outputs.upToDateWhen { false }
 }
