--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   jwt:
-    secret: $(JWT_SECRET)
-    expiration: $(JWT_EXPIRATION)
+    secret: ${JWT_SECRET}
+    expiration: ${JWT_EXPIRATION}
   cors:
     allowed-origins: ${CORS_ALLOWED_ORIGINS}  # 허용할 출처 설정
     allowed-methods: ${CORS_ALLOWED_METHODS} # 허용할 HTTP 메서드 설정
