--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: Image build and push
 
 on:
   push:
-    branches: [ "main", "infra/#13/ci-setting" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
