--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,7 @@ jobs:
       - name: Decode and create application.yml
         run: |
           echo \${{ secrets.ENCODED_APPLICATION_YML }} | base64 --decode > src/main/resources/application.yml
+          cat ./src/main/resources/application.yml
       - name: Checkout
         uses: actions/checkout@v2
       - name: Docker meta
