--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,9 @@ jobs:
       - name: Decode and create application.yml
         run: |
            mv ./src/main/resources/application.yml.sample ./src/main/resources/application.yml
+           ls -al
+           ls -al ./src/main/resources/
+
       - name: Checkout
         uses: actions/checkout@v2
       - name: Docker meta
