--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Decode and create application.yml
         run: |
+          ls -al ./src/main/resources/
            mv ./src/main/resources/application.yml.sample ./src/main/resources/application.yml
            ls -al
            ls -al ./src/main/resources/
