--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,7 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Decode and create application.yml
+        run: |
+          mv ./src/main/resources/application.yml.sample ./src/main/resources/application.yml
       - name: Checkout
         uses: actions/checkout@v2
       - name: Docker meta
