--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,55 @@ jobs:
         uses: actions/checkout@v2
       - name: Decode and create application.yml
         run: |
-          mv ./src/main/resources/application.yml.sample ./src/main/resources/application.yml
+          JWT_SECRET="${{ secrets.JWT_SECRET }}"
+          JWT_EXPIRATION="${{ secrets.JWT_EXPIRATION }}"
+          CORS_ALLOWED_DEV_ORIGINS="${{ secrets.CORS_ALLOWED_DEV_ORIGINS }}"
+          CORS_ALLOWED_PROD_ORIGINS="${{ secrets.CORS_ALLOWED_PROD_ORIGINS }}"
+          CORS_ALLOWED_METHODS="${{ secrets.CORS_ALLOWED_METHODS }}"
+          CORS_ALLOWED_HEADERS="${{ secrets.CORS_ALLOWED_HEADERS }}"
+          SPRING_DATA_MONGODB_DATABASE="${{ secrets.SPRING_DATA_MONGODB_DATABASE }}"
+          SPRING_DATA_MONGODB_URI="${{ secrets.SPRING_DATA_MONGODB_URI }}"
+          SPRING_SECURITY_AUTH_LIVEBLOCKSECRETKEY="${{ secrets.SPRING_SECURITY_AUTH_LIVEBLOCKSECRETKEY }}"
+          GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
+          GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
+          GOOGLE_REDIRECT_URI="${{ secrets.GOOGLE_REDIRECT_URI }}"
+          GOOGLE_TOKEN_URI="${{ secrets.GOOGLE_TOKEN_URI }}"
+          GOOGLE_USER_INFO_URI="${{ secrets.GOOGLE_USER_INFO_URI }}"
+          
+          cat << EOF > ./src/main/resources/application.yml
+          spring:
+            jwt:
+              secret: ${JWT_SECRET}
+              expiration: ${JWT_EXPIRATION}
+            cors:
+              allowed-origins:
+                - ${CORS_ALLOWED_DEV_ORIGINS}
+                - ${CORS_ALLOWED_PROD_ORIGINS}
+              allowed-methods: ${CORS_ALLOWED_METHODS} # 허용할 HTTP 메서드 설정
+              allowed-headers: ${CORS_ALLOWED_HEADERS}  # 허용할 헤더 설정
+            data:
+              mongodb:
+                database: ${SPRING_DATA_MONGODB_DATABASE}
+                uri: ${SPRING_DATA_MONGODB_URI}
+            security:
+              auth:
+                liveBlockSecretKey: ${SPRING_SECURITY_AUTH_LIVEBLOCKSECRETKEY}
+              oauth2:
+                client:
+                  registration:
+                    google:
+                      client-id: ${GOOGLE_CLIENT_ID}
+                      client-secret: ${GOOGLE_CLIENT_SECRET}
+                      redirect-uri: ${GOOGLE_REDIRECT_URI}
+                      scope:
+                        - email
+                        - profile
+                  provider:
+                    google:
+                      token-uri: ${GOOGLE_TOKEN_URI}
+                      user-info-uri: ${GOOGLE_USER_INFO_URI}
+          EOF
+        shell: bash
       - name: Checkout
         uses: actions/checkout@v2
       - name: Docker meta
