--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,9 +18,9 @@ jobs:
           CORS_ALLOWED_PROD_ORIGINS="${{ secrets.CORS_ALLOWED_PROD_ORIGINS }}"
           CORS_ALLOWED_METHODS="${{ secrets.CORS_ALLOWED_METHODS }}"
           CORS_ALLOWED_HEADERS="${{ secrets.CORS_ALLOWED_HEADERS }}"
-          SPRING_DATA_MONGODB_DATABASE="${{ secrets.SPRING_DATA_MONGODB_DATABASE }}"
-          SPRING_DATA_MONGODB_URI="${{ secrets.SPRING_DATA_MONGODB_URI }}"
-          SPRING_SECURITY_AUTH_LIVEBLOCKSECRETKEY="${{ secrets.SPRING_SECURITY_AUTH_LIVEBLOCKSECRETKEY }}"
+          SPRING_DATA_MONGODB_DATABASE="${{ secrets.MONGODB_DATABASE }}"
+          SPRING_DATA_MONGODB_URI="${{ secrets.MONGODB_URI  }}"
+          SPRING_SECURITY_AUTH_LIVEBLOCKSECRETKEY="${{ secrets.LIVEBLOCK_SECRET_KEY }}"
           GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
           GOOGLE_CLIENT_SECRET="${{ secrets.GOOGLE_CLIENT_SECRET }}"
           GOOGLE_REDIRECT_URI="${{ secrets.GOOGLE_REDIRECT_URI }}"
